Add support for Letsencrypt (#52)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2024"
 repository = "https://github.com/Terrazzo-Web/Terrazzo"
@@ -45,17 +45,17 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { version = "0.1.8", path = "utils/autoclone/autoclone" }
-nameth = { version = "0.1.8", path = "utils/nameth/nameth" }
-nameth-macro = { version = "0.1.8", path = "utils/nameth/nameth-macro" }
-terrazzo = { version = "0.1.8", path = "framework/terrazzo", default-features = false }
-terrazzo-build = { version = "0.1.8", path = "framework/build" }
-terrazzo-client = { version = "0.1.8", path = "framework/client" }
-terrazzo-fixture = { version = "0.1.8", path = "utils/fixture" }
-terrazzo-macro = { version = "0.1.8", path = "framework/macro" }
-trz-gateway-client = { version = "0.1.8", path = "remote/client" }
-trz-gateway-common = { version = "0.1.8", path = "remote/common" }
-trz-gateway-server = { version = "0.1.8", path = "remote/server" }
+autoclone = { version = "0.1.9", path = "utils/autoclone/autoclone" }
+nameth = { version = "0.1.9", path = "utils/nameth/nameth" }
+nameth-macro = { version = "0.1.9", path = "utils/nameth/nameth-macro" }
+terrazzo = { version = "0.1.9", path = "framework/terrazzo", default-features = false }
+terrazzo-build = { version = "0.1.9", path = "framework/build" }
+terrazzo-client = { version = "0.1.9", path = "framework/client" }
+terrazzo-fixture = { version = "0.1.9", path = "utils/fixture" }
+terrazzo-macro = { version = "0.1.9", path = "framework/macro" }
+trz-gateway-client = { version = "0.1.9", path = "remote/client" }
+trz-gateway-common = { version = "0.1.9", path = "remote/common" }
+trz-gateway-server = { version = "0.1.9", path = "remote/server" }
 
 axum = { version = "0.8.4" }
 axum-server = { version = "0.7.2" }
@@ -68,8 +68,9 @@ futures = { version = "0.3.31" }
 hostname = { version = "0.4.1" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
-hyper-util = { version = "0.1.11" }
+hyper-util = { version = "0.1.12" }
 include_directory = { version = "0.1.1" }
+instant-acme = { version = "0.7.2" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
@@ -83,6 +84,7 @@ proc-macro2 = { version = "1.0.95" }
 prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
+rcgen = { version = "0.13.2" }
 reqwest = { version = "0.12.15" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
@@ -98,7 +100,7 @@ stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
 tempfile = { version = "3.20.0" }
 thiserror = { version = "2.0.12" }
-tokio = { version = "1.45.0" }
+tokio = { version = "1.45.1" }
 tokio-rustls = { version = "0.26.2" }
 tokio-tungstenite = { version = "0.26.1" }
 tokio-util = { version = "0.7.15" }
@@ -110,7 +112,7 @@ tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-uuid = { version = "1.16.0" }
+uuid = { version = "1.17.0" }
 wasm-bindgen = { version = "0.2.100" }
 wasm-bindgen-futures = { version = "0.4.50" }
 wasm-bindgen-test = { version = "0.3.50" }
