--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,14 +68,14 @@ futures = { version = "0.3.31" }
 hostname = { version = "0.4.1" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
-hyper-util = { version = "0.1.12" }
+hyper-util = { version = "0.1.13" }
 include_directory = { version = "0.1.1" }
 instant-acme = { version = "0.7.2" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
-openssl = { version = "0.10.72" }
+openssl = { version = "0.10.73" }
 pem = { version = "3.0.5" }
 pin-project = { version = "1.1.10" }
 portpicker = { version = "0.1.1" }
@@ -85,7 +85,7 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 rcgen = { version = "0.13.2" }
-reqwest = { version = "0.12.15" }
+reqwest = { version = "0.12.18" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
@@ -104,6 +104,7 @@ tokio = { version = "1.45.1" }
 tokio-rustls = { version = "0.26.2" }
 tokio-tungstenite = { version = "0.26.1" }
 tokio-util = { version = "0.7.15" }
+toml = { version = "0.8.22" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
 tower = { version = "0.5.2" }
