--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.1.10"
+version = "0.1.11"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2024"
 repository = "https://github.com/Terrazzo-Web/Terrazzo"
@@ -45,17 +45,17 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { version = "0.1.10", path = "utils/autoclone/autoclone" }
-nameth = { version = "0.1.10", path = "utils/nameth/nameth" }
-nameth-macro = { version = "0.1.10", path = "utils/nameth/nameth-macro" }
-terrazzo = { version = "0.1.10", path = "framework/terrazzo", default-features = false }
-terrazzo-build = { version = "0.1.10", path = "framework/build" }
-terrazzo-client = { version = "0.1.10", path = "framework/client" }
-terrazzo-fixture = { version = "0.1.10", path = "utils/fixture" }
-terrazzo-macro = { version = "0.1.10", path = "framework/macro" }
-trz-gateway-client = { version = "0.1.10", path = "remote/client" }
-trz-gateway-common = { version = "0.1.10", path = "remote/common" }
-trz-gateway-server = { version = "0.1.10", path = "remote/server" }
+autoclone = { version = "0.1.11", path = "utils/autoclone/autoclone" }
+nameth = { version = "0.1.11", path = "utils/nameth/nameth" }
+nameth-macro = { version = "0.1.11", path = "utils/nameth/nameth-macro" }
+terrazzo = { version = "0.1.11", path = "framework/terrazzo", default-features = false }
+terrazzo-build = { version = "0.1.11", path = "framework/build" }
+terrazzo-client = { version = "0.1.11", path = "framework/client" }
+terrazzo-fixture = { version = "0.1.11", path = "utils/fixture" }
+terrazzo-macro = { version = "0.1.11", path = "framework/macro" }
+trz-gateway-client = { version = "0.1.11", path = "remote/client" }
+trz-gateway-common = { version = "0.1.11", path = "remote/common" }
+trz-gateway-server = { version = "0.1.11", path = "remote/server" }
 
 axum = { version = "0.8.4" }
 axum-server = { version = "0.7.2" }
@@ -68,14 +68,14 @@ futures = { version = "0.3.31" }
 hostname = { version = "0.4.1" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
-hyper-util = { version = "0.1.12" }
+hyper-util = { version = "0.1.13" }
 include_directory = { version = "0.1.1" }
 instant-acme = { version = "0.7.2" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
-openssl = { version = "0.10.72" }
+openssl = { version = "0.10.73" }
 pem = { version = "3.0.5" }
 pin-project = { version = "1.1.10" }
 portpicker = { version = "0.1.1" }
@@ -85,7 +85,7 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 rcgen = { version = "0.13.2" }
-reqwest = { version = "0.12.15" }
+reqwest = { version = "0.12.18" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
@@ -104,6 +104,7 @@ tokio = { version = "1.45.1" }
 tokio-rustls = { version = "0.26.2" }
 tokio-tungstenite = { version = "0.26.1" }
 tokio-util = { version = "0.7.15" }
+toml = { version = "0.8.22" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
 tower = { version = "0.5.2" }
