--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 rcgen = { version = "0.13.2" }
-reqwest = { version = "0.12.18" }
+reqwest = { version = "0.12.19" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
@@ -96,6 +96,7 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+server_fn_macro = { version = "0.8.2" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
 tempfile = { version = "3.20.0" }
@@ -108,7 +109,7 @@ toml = { version = "0.8.22" }
 tonic = { version = "0.13.1" }
 tonic-build = { version = "0.13.1" }
 tower = { version = "0.5.2" }
-tower-http = { version = "0.6.4" }
+tower-http = { version = "0.6.5" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 tracing-subscriber = { version = "0.3.19" }
