--- a/framework/macro/Cargo.toml
+++ b/framework/macro/Cargo.toml
@@ -18,9 +18,15 @@ proc-macro = true
 [dependencies]
 deluxe = { workspace = true }
 prettyplease = { workspace = true }
+server_fn_macro = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full", "visit-mut"] }
+
+[features]
+default = []
+client = []
+server = ["server_fn_macro/axum", "server_fn_macro/ssr"]
 
 [lints]
 workspace = true
