--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ prost = { version = "0.13.5" }
 prost-types = { version = "0.13.5" }
 quote = { version = "1.0.40" }
 rcgen = { version = "0.13.2" }
-reqwest = { version = "0.12.18" }
+reqwest = { version = "0.12.19" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
 rsass-macros = { version = "0.29.0" }
@@ -96,6 +96,7 @@ scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140" }
 serde_urlencoded = { version = "0.7.1" }
+server_fn_macro = { version = "0.8.2" }
 stylance = { version = "0.6.0" }
 syn = { version = "2.0.101" }
 tempfile = { version = "3.20.0" }
