--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: ./.github/actions/setup
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+          cache-level: "lenient"
       - uses: ./.github/actions/check
   test:
     runs-on: ubuntu-latest
@@ -22,6 +23,7 @@ jobs:
       - uses: ./.github/actions/setup
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+          cache-level: "lenient"
       - uses: ./.github/actions/test
   build:
     runs-on: ubuntu-latest
@@ -31,4 +33,5 @@ jobs:
       - uses: ./.github/actions/setup
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+          cache-level: "lenient"
       - uses: ./.github/actions/build
