span macros wip

--- a/framework/terrazzo/Cargo.toml
+++ b/framework/terrazzo/Cargo.toml
@@ -33,7 +33,7 @@ stylance = { workspace = true, optional = true }
 terrazzo-client = { workspace = true, optional = true }
 terrazzo-macro = { workspace = true }
 thiserror = { workspace = true, optional = true }
-tracing = { workspace = true }
+tracing = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true, optional = true }
 wasm-bindgen-futures = { workspace = true, optional = true }
 web-sys = { workspace = true, optional = true, features = [
@@ -74,8 +74,9 @@ server = [
     "dep:rsass-macros",
     "terrazzo-macro/server",
 ]
-concise_traces = ["terrazzo-client?/concise_traces"]
+concise-traces = ["terrazzo-client?/concise-traces"]
 rustdoc = []
+client-tracing = ["terrazzo-client?/client-tracing"]
 
 [package.metadata.stylance]
 output_file = "./target/css/common.scss"
