--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -17,9 +17,9 @@ autoclone = { workspace = true }
 nameth = { workspace = true }
 scopeguard = { workspace = true }
 thiserror = { workspace = true }
-tracing = { workspace = true, optional = true }
-tracing-subscriber = { workspace = true, optional = true }
-tracing-subscriber-wasm = { workspace = true, optional = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tracing-subscriber-wasm = { workspace = true }
 wasm-bindgen = { workspace = true }
 web-sys = { workspace = true, features = [
     "Attr",
@@ -37,12 +37,7 @@ terrazzo-macro = { workspace = true }
 web-sys = { workspace = true, features = ["MouseEvent"] }
 
 [features]
-client-tracing = [
-    "dep:tracing",
-    "dep:tracing-subscriber",
-    "dep:tracing-subscriber-wasm",
-]
+concise_traces = []
 
-concise-traces = []
 [lints]
 workspace = true
