--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -17,9 +17,9 @@ autoclone = { workspace = true }
 nameth = { workspace = true }
 scopeguard = { workspace = true }
 thiserror = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-tracing-subscriber-wasm = { workspace = true }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-subscriber-wasm = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true }
 web-sys = { workspace = true, features = [
     "Attr",
@@ -38,6 +38,11 @@ web-sys = { workspace = true, features = ["MouseEvent"] }
 
 [features]
 concise-traces = []
+client-tracing = [
+    "dep:tracing",
+    "dep:tracing-subscriber",
+    "dep:tracing-subscriber-wasm",
+]
 
 [lints]
 workspace = true
