--- a/framework/terrazzo/Cargo.toml
+++ b/framework/terrazzo/Cargo.toml
@@ -77,7 +77,7 @@ server = [
 ]
 concise-traces = ["terrazzo-client?/concise-traces"]
 rustdoc = []
-client-tracing = ["terrazzo-client?/client-tracing"]
+diagnostics = ["terrazzo-client?/diagnostics"]
 
 [package.metadata.stylance]
 output_file = "./target/css/common.scss"
