--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -36,6 +36,8 @@ web-sys = { workspace = true, features = [
 
 [dev-dependencies]
 terrazzo-macro = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 web-sys = { workspace = true, features = ["MouseEvent"] }
 
 [features]
