propagate max_client_level_info/max_client_level_debug

--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -47,6 +47,14 @@ diagnostics = [
     "dep:tracing-subscriber",
     "dep:tracing-subscriber-wasm",
 ]
+max_level_debug = [
+    "tracing?/max_level_debug",
+    "tracing?/release_max_level_debug",
+]
+max_level_info = [
+    "tracing?/max_level_info",
+    "tracing?/release_max_level_info",
+]
 
 [lints]
 workspace = true
