--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -67,10 +67,12 @@ server = [
     "terrazzo/server",
 ]
 max_level_debug = [
+    "terrazzo?/max_client_level_debug",
     "tracing?/max_level_debug",
     "tracing?/release_max_level_debug",
 ]
 max_level_info = [
+    "terrazzo?/max_client_level_info",
     "tracing?/max_level_info",
     "tracing?/release_max_level_info",
     "concise-traces",
