--- a/framework/client/Cargo.toml
+++ b/framework/client/Cargo.toml
@@ -17,9 +17,9 @@ autoclone = { workspace = true }
 nameth = { workspace = true }
 scopeguard = { workspace = true }
 thiserror = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-tracing-subscriber-wasm = { workspace = true }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+tracing-subscriber-wasm = { workspace = true, optional = true }
 wasm-bindgen = { workspace = true }
 web-sys = { workspace = true, features = [
     "Attr",
@@ -27,6 +27,8 @@ web-sys = { workspace = true, features = [
     "Document",
     "Element",
     "EventTarget",
+    "HtmlElement",
+    "HtmlInputElement",
     "NodeList",
     "Text",
     "Window",
@@ -34,10 +36,25 @@ web-sys = { workspace = true, features = [
 
 [dev-dependencies]
 terrazzo-macro = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 web-sys = { workspace = true, features = ["MouseEvent"] }
 
 [features]
-concise_traces = []
+concise-traces = []
+diagnostics = [
+    "dep:tracing",
+    "dep:tracing-subscriber",
+    "dep:tracing-subscriber-wasm",
+]
+max_level_debug = [
+    "tracing?/max_level_debug",
+    "tracing?/release_max_level_debug",
+]
+max_level_info = [
+    "tracing?/max_level_info",
+    "tracing?/release_max_level_info",
+]
 
 [lints]
 workspace = true
