Load assets from disk in debug mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "rust-analyzer.cargo.features": [
-        "client",
-        "server",
         "acme",
+        "client",
+        "debug",
+        "server",
     ],
 }
