--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -5,10 +5,11 @@ runs:
   steps:
     - name: Clippy
       run: |
-        cargo clippy --features client
-        cargo clippy --features client,diagnostics
-        cargo clippy --features server
         cargo clippy --features=client,server
+        cargo clippy --features client,debug,diagnostics
+        cargo clippy --features client --release
+        cargo clippy --features server,debug,diagnostics
+        cargo clippy --features server --release
       shell: bash
 
     - name: Rustfmt
