--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ rcgen = { version = "0.13.2" }
 reqwest = { version = "0.12.20" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
+rsass = { version = "0.29.2" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.0.7" }
 rustls = { version = "0.23.28" }
