--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -3,6 +3,15 @@ runs:
   using: "composite"
 
   steps:
+    - name: Check
+      run: |
+        cargo check --features=client,server
+        cargo check --features client,debug,diagnostics
+        cargo check --features client --release
+        cargo check --features server,debug,diagnostics
+        cargo check --features server --release
+      shell: bash
+
     - name: Clippy
       run: |
         cargo clippy --features=client,server
