--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,16 +61,16 @@ axum = { version = "0.8.4" }
 axum-server = { version = "0.7.2" }
 bytes = { version = "1.10.1" }
 cms = { version = "0.2.3" }
-darling = { version = "0.20.11" }
+darling = { version = "0.21.1" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 hostname = { version = "0.4.1" }
 http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
-hyper-util = { version = "0.1.15" }
+hyper-util = { version = "0.1.16" }
 include_directory = { version = "0.1.1" }
-instant-acme = { version = "0.7.2" }
+instant-acme = { version = "0.8.2" }
 libc = { version = "0.2.174" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
@@ -79,36 +79,37 @@ openssl = { version = "0.10.73" }
 pem = { version = "3.0.5" }
 pin-project = { version = "1.1.10" }
 portpicker = { version = "0.1.1" }
-prettyplease = { version = "0.2.34" }
+prettyplease = { version = "0.2.36" }
 proc-macro2 = { version = "1.0.95" }
-prost = { version = "0.13.5" }
-prost-types = { version = "0.13.5" }
+prost = { version = "0.14.1" }
+prost-types = { version = "0.14.1" }
 quote = { version = "1.0.40" }
-rcgen = { version = "0.13.2" }
+rcgen = { version = "0.14.3" }
 reqwest = { version = "0.12.22" }
 reqwest-wasm = { version = "0.11.16" }
 ring = { version = "0.17.14" }
 rsass = { version = "0.29.2" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.0.8" }
-rustls = { version = "0.23.29" }
+rustls = { version = "0.23.31" }
 rustls-native-certs = { version = "0.8.1" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
-serde_json = { version = "1.0.141" }
+serde_json = { version = "1.0.142" }
 serde_urlencoded = { version = "0.7.1" }
-server_fn_macro = { version = "0.8.5" }
-stylance = { version = "0.6.0" }
+server_fn_macro = { version = "0.8.6" }
+stylance = { version = "0.7.0" }
 syn = { version = "2.0.103" }
 tempfile = { version = "3.20.0" }
 thiserror = { version = "2.0.12" }
-tokio = { version = "1.46.1" }
+tokio = { version = "1.47.1" }
 tokio-rustls = { version = "0.26.2" }
 tokio-tungstenite = { version = "0.27.0" }
-tokio-util = { version = "0.7.15" }
-toml = { version = "0.8.22" }
-tonic = { version = "0.13.1" }
-tonic-build = { version = "0.13.1" }
+tokio-util = { version = "0.7.16" }
+toml = { version = "0.9.5" }
+tonic = { version = "0.14.0" }
+tonic-prost = { version = "0.14.0" }
+tonic-prost-build = { version = "0.14.0" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.5" }
 tracing = { version = "0.1.41" }
