--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -31,6 +31,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
+tonic-prost = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 x509-parser = { workspace = true }
@@ -41,7 +42,7 @@ serde_json = { workspace = true }
 toml = { workspace = true }
 
 [build-dependencies]
-tonic-build = { workspace = true, features = ["prost"] }
+tonic-prost-build = { workspace = true }
 
 [lints]
 workspace = true
