--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,9 @@
   "automergeStrategy": "squash",
   "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
 
+  "platform": "github",
+  "repositories": ["Terrazzo-Web/Terrazzo"],
+
   "packageRules": [
     {
       "description": "lockFileMaintenance",
