--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -15,4 +15,5 @@ jobs:
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v44.0.2
         with:
+          configurationFile: .github/renovate-config.js
           token: ${{ secrets.RENOVATE_TOKEN }}
