--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,7 +4,7 @@ inputs:
     description: "GitHub token for authentication"
     required: true
   cache-level:
-    description: 'How to setup the cache'
+    description: "How to setup the cache"
     required: true
     type: choice
     options:
@@ -26,7 +26,7 @@ runs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('./**/Cargo.lock') }}
     - name: Setup cache for Rust compilation
       if: ${{ inputs.cache-level == 'lenient' }}
       uses: actions/cache@v4.3.0
@@ -39,7 +39,7 @@ runs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('./**/Cargo.lock') }}
         restore-keys: ${{ runner.os }}-cargo-${{ github.job }}
 
     - name: Add wasm32 compilation target
