--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,10 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache-level: "strict"
-      - uses: ./.github/actions/check
+      - uses: ./.github/actions/check-compile
+      - uses: ./.github/actions/check-clippy
+      - uses: ./.github/actions/check-rustfmt
+      - uses: ./.github/actions/check-documentation
   test:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -30,7 +33,9 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache-level: "strict"
-      - uses: ./.github/actions/test
+      - uses: ./.github/actions/test-compile
+      - uses: ./.github/actions/test-client
+      - uses: ./.github/actions/test-server
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -42,7 +47,9 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache-level: "strict"
-      - uses: ./.github/actions/build
+      - uses: ./.github/actions/build-client
+      - uses: ./.github/actions/build-server
+      - uses: ./.github/actions/build-demo
   publish-dry-run:
     runs-on: ubuntu-latest
     steps:
