--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -20,6 +20,7 @@ required-features = ["server"]
 nameth = { workspace = true, optional = true }
 scopeguard = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
+stylance = { workspace = true, optional = true }
 terrazzo = { workspace = true, optional = true }
 thiserror = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
@@ -53,10 +54,12 @@ client = [
     "dep:nameth",
     "dep:scopeguard",
     "dep:serde_json",
+    "dep:stylance",
     "dep:thiserror",
-    "dep:wasm-bindgen",
     "dep:wasm-bindgen-futures",
+    "dep:wasm-bindgen",
     "dep:web-sys",
+    "web-sys/HtmlSelectElement",
     "terrazzo/client",
 ]
 server = [
@@ -78,7 +81,8 @@ max_level_info = [
     "concise-traces",
 ]
 concise-traces = ["terrazzo?/concise-traces"]
-diagnostics = ["terrazzo?/diagnostics"]
+debug = ["terrazzo/debug", "terrazzo?/diagnostics"]
+no_wasm_build = []
 
 [package.metadata.stylance]
 output_file = "./target/css/demo.scss"
