--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,7 +106,7 @@ tokio = { version = "1.49.0" }
 tokio-rustls = { version = "0.26.4" }
 tokio-tungstenite = { version = "0.28.0" }
 tokio-util = { version = "0.7.17" }
-toml = { version = "0.9.10+spec-1.1.0" }
+toml = { version = "0.9.10" }
 tonic = { version = "0.14.2" }
 tonic-prost = { version = "0.14.2" }
 tonic-prost-build = { version = "0.14.2" }
